# defi-ai

./: .gitignore  DockerFile  Dockerfile  LICENSE.txt  README.md  analyse.ipynb  app.py  avatar.py  data_point.py  hatch.toml  hotel.py  model_run.ipynb  options.py  pyproject.toml  req.py  req_enums.py  requirements.txt  res.py  sample.py  scrape.py  sql_global.py  train.py
Notebook/: Stacking_models.ipynb  catboost.ipynb  model_run.ipynb  test_all_model.ipynb  trans.py
defi_ai/: __about__.py  __init__.py  init.py  scrape.py  type.py
defi_ai/sql/: base.py  utils.py
defi_ai/sql/model/: avatar.py  data_point.py  hotel.py  request.py  request_count.py  response.py  sample.py
model/: download.py
