[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defi-ai"
description = 'Tools for Defi AI 2023'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "Vo Van Nghia", email = "vanvnghia@gmail.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["SQLAlchemy==1.4.41", "mysqlclient==2.1.1", "requests==2.28.1"]
dynamic = ["version"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
